Ajout d'un timeout de 30 sec sur toutes les requêtes

--- a/XeeSDK/Resources/es.lproj/local.strings
+++ b/XeeSDK/Resources/es.lproj/local.strings
@@ -9,3 +9,4 @@
 "connecter" = "Registrarse";
 "creer_compte" = "Sign Up";
 "cancel" = "Cancel";
+"timeout_message" = "Compruebe su conexión a Internet";
