--- a/XeeSDK/Resources/pt-PT.lproj/local.strings
+++ b/XeeSDK/Resources/pt-PT.lproj/local.strings
@@ -9,3 +9,4 @@
 "connecter" = "Assinar em";
 "creer_compte" = "Sign Up";
 "cancel" = "Cancel";
+"timeout_message" = "Verifique sua conexão com a internet";
