--- a/XeeSDK/Resources/nl.lproj/local.strings
+++ b/XeeSDK/Resources/nl.lproj/local.strings
@@ -9,3 +9,4 @@
 "connecter" = "Aanmelden";
 "creer_compte" = "Sign Up";
 "cancel" = "Cancel";
+"timeout_message" = "Überprüfen Sie Ihre Internetverbindung";
