Suppression du message d'erreur "Please light a candle and pray for our devops"

--- a/XeeSDK/Resources/es.lproj/local.strings
+++ b/XeeSDK/Resources/es.lproj/local.strings
@@ -7,3 +7,4 @@
 */
 
 "connecter" = "Registrarse";
+"default_error" = "Nuestro servicio no está disponible temporalmente. Inténtalo de nuevo más tarde";
