--- a/XeeSDK/Resources/it.lproj/local.strings
+++ b/XeeSDK/Resources/it.lproj/local.strings
@@ -7,3 +7,4 @@
 */
 
 "connecter" = "Registrati";
+"default_error" = "Il nostro servizio è temporaneamente non disponibile, per favore riprova più tardi";
