Changement de l'erreur "Please light a candle and pray for our devops"

--- a/XeeSDK/Resources/en.lproj/local.strings
+++ b/XeeSDK/Resources/en.lproj/local.strings
@@ -9,3 +9,4 @@
 "connecter" = "Sign in";
 "creer_compte" = "Sign Up";
 "cancel" = "Cancel";
+"default_error" = "Our service is temporarily unavailable, please try again later";
