--- a/XeeSDK/Resources/it.lproj/local.strings
+++ b/XeeSDK/Resources/it.lproj/local.strings
@@ -9,3 +9,4 @@
 "connecter" = "Registrati";
 "creer_compte" = "Sign Up";
 "cancel" = "Cancel";
+"default_error" = "Il nostro servizio è temporaneamente non disponibile, per favore riprova più tardi";
