--- a/XeeSDK/Resources/pt-PT.lproj/local.strings
+++ b/XeeSDK/Resources/pt-PT.lproj/local.strings
@@ -9,3 +9,4 @@
 "connecter" = "Assinar em";
 "creer_compte" = "Sign Up";
 "cancel" = "Cancel";
+"default_error" = "Nosso serviço está temporariamente indisponível, tente novamente mais tarde";
